--- a/doc/[21.09.13] prediction_covid19.tex
+++ b/doc/[21.09.13] prediction_covid19.tex
@@ -175,13 +175,14 @@ Yonsei University}
 	    	\end{tabular}
 	    	\caption{The change of transmission rate according to the social distancing level from 2021/02/15 to 2021/09/01.}
 	    \end{table}
-	    \footnotetext{It will be changed according to the experiments.}
+	    \footnotetext[2]{It will be changed according to the experiments.}
 	\end{frame}
 
 	\begin{frame}\frametitle{School opening effect}
 		\begin{itemize}
 			\item The school opening effect only affects the contact rate between teenagers.
 			\item We assumed that the contact number of teenagers reduces by 85.86\%.
+			\item We assumed that the school opening effect is applied since 2021/09/02.
 		\end{itemize}
 	    \begin{table}
 	    	\begin{tabular}{crr}
