document: [edited] change increment of contact rate

--- a/doc/[21.09.13] prediction_covid19.tex
+++ b/doc/[21.09.13] prediction_covid19.tex
@@ -218,9 +218,9 @@ Yonsei University}
 		\begin{table}
 			\begin{tabular}{clccccc}
 				\toprule
-				& \multicolumn{5}{c}{\textbf{School opening}} \\
+				& \multicolumn{5}{c}{\textbf{School opening (increment of contact)}} \\
 				\cmidrule{3-7}
-				&  & 원격수업 & 33\% 등교 & 50\% 등교 & 66\% 등교 & 전면 등교 \\
+				&  & 원격수업 & 2배 증가 & 3배 증가 & 4배 증가 & 5배 증가 \\
 				\midrule
 				\multirow{2}{*}{\textbf{SD}\footnotemark[3]} & 2단계 & 1 & 2 & 3 & 4 & 5 \\
 				& 1.5단계 & 6 & 7 & 8 & 9 & 10 \\
@@ -269,8 +269,8 @@ Yonsei University}
 		\begin{frame}\frametitle{Experiment \idx}
 		    \begin{figure}
 		    	\centering
-		    	\includegraphics[width=11cm]{../results/predict_\idx/daily_all_age_pred.eps}
-		    	\includegraphics[width=11cm]{../results/predict_\idx/cumul_all_age_pred.eps}
+		    	\includegraphics[width=10cm]{../results/predict_\idx/daily_all_age_pred.eps}
+		    	\includegraphics[width=10cm]{../results/predict_\idx/cumul_all_age_pred.eps}
 		    	\caption{The model prediction and data for daily confirmed cases (top) and cumulative confirmed cases (bottom).}
 		    \end{figure}
 		\end{frame}
