--- a/results/estimate_before_June/result.tex
+++ b/results/estimate_before_June/result.tex
@@ -1,3 +1,3 @@
-$\beta_1 & 3.5329e-02 & 4.3276e-02 \\
+$\beta$ & 3.5329e-02 & 4.3276e-02 \\
 Cost & 2.9368e+04 & 5.0708e+03 \\
-Time & 0.0000e+00 & 2.2871e+01 \\
+Time & 0.0000e+00 & 2.2943e+01 \\
