update figures (plotted on iMac) & change frame titles

--- a/doc/[21.10.18] parameter_estimation_two_Vcompartment.tex
+++ b/doc/[21.10.18] parameter_estimation_two_Vcompartment.tex
@@ -229,7 +229,7 @@
 	    \end{table}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 1: 2단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 1: 7/12-9/1  현 2단계 (전 2단계)}
 	    \begin{itemize}
 			\item $\hat{\beta} = 0.0426$
 		\end{itemize}
@@ -245,7 +245,7 @@
 	    \end{table}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 1: 2단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 1: 7/12-9/1  현 2단계 (전 2단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=11cm]{../results/estimate_sd_2nd_1/daily_all_age.eps}
@@ -254,7 +254,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 1: 2단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 1: 7/12-9/1  현 2단계 (전 2단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=10cm]{../results/estimate_sd_2nd_1/rep_num.eps}
@@ -262,7 +262,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 2: 3단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 2: 7/12-9/1  3단계 (전 2.5단계)}
 	    \begin{itemize}
 			\item $\hat{\beta} = 0.0426$
 		\end{itemize}
@@ -278,7 +278,7 @@
 	    \end{table}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 2: 3단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 2: 7/12-9/1  3단계 (전 2.5단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=11cm]{../results/estimate_sd_2nd_2/daily_all_age.eps}
@@ -287,7 +287,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 2: 3단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 2: 7/12-9/1  3단계 (전 2.5단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=10cm]{../results/estimate_sd_2nd_2/rep_num.eps}
@@ -295,7 +295,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 3: 4단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 3: 7/12-9/1  4단계 (전 3단계)}
 	    \begin{itemize}
 			\item $\hat{\beta} = 0.0426$
 		\end{itemize}
@@ -311,7 +311,7 @@
 	    \end{table}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 3: 4단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 3: 7/12-9/1  4단계 (전 3단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=11cm]{../results/estimate_sd_2nd_3/daily_all_age.eps}
@@ -320,7 +320,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 3: 4단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 3: 7/12-9/1  4단계 (전 3단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=10cm]{../results/estimate_sd_2nd_3/rep_num.eps}
