--- a/doc/[21.10.21] prediction_two_Vcompartment.tex
+++ b/doc/[21.10.21] prediction_two_Vcompartment.tex
@@ -229,7 +229,7 @@
 	    \end{table}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 1: 2단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 1: 7/12-9/1 간 현 2단계 (전 2단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=11cm]{../results/predict_exp_1_sd3_same_school_same/daily_all_age.eps}
@@ -238,7 +238,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 1: 2단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 1: 7/12-9/1 간 현 2단계 (전 2단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=10cm]{../results/predict_exp_1_sd3_same_school_same/rep_num.eps}
@@ -246,7 +246,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 2: 3단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 2: 7/12-9/1 간 3단계 (전 2.5단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=11cm]{../results/predict_exp_2_sd3_same_school_same/daily_all_age.eps}
@@ -255,7 +255,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 2: 3단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 2: 7/12-9/1 간 3단계 (전 2.5단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=10cm]{../results/predict_exp_2_sd3_same_school_same/rep_num.eps}
@@ -263,7 +263,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 3: 4단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 3: 7/12-9/1 간 4단계 (전 3단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=11cm]{../results/predict_exp_3_sd3_same_school_same/daily_all_age.eps}
@@ -272,7 +272,7 @@
 	    \end{figure}
 	\end{frame}
 
-	\begin{frame}\frametitle{Experiment 3: 4단계 (2021/07/12-2021/09/01)}
+	\begin{frame}\frametitle{Experiment 3: 7/12-9/1 간 4단계 (전 3단계)}
 	    \begin{figure}
 	    	\centering
 	    	\includegraphics[width=10cm]{../results/predict_exp_3_sd3_same_school_same/rep_num.eps}
