add more references

--- a/doc/210909_ref.bib
+++ b/doc/210909_ref.bib
@@ -32,3 +32,19 @@
   year={2020},
   publisher={Korean Society of Epidemiology}
 }
+
+@article{bernal2021early,
+  title={Early effectiveness of COVID-19 vaccination with BNT162b2 mRNA vaccine and ChAdOx1 adenovirus vector vaccine on symptomatic disease, hospitalisations and mortality in older adults in England},
+  author={Bernal, Jamie Lopez and Andrews, Nick and Gower, Charlotte and Stowe, Julia and Robertson, Chris and Tessier, Elise and Simmons, Ruth and Cottrell, Simon and Robertson, Richard and O'Doherty, Mark and others},
+  journal={MedRxiv},
+  year={2021},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@incollection{kdca2021,
+  title={2021년 5월∼7월 기간 동안 코로나19 백신의 중증 및 사망예방효과},
+  booktitle={주간 건강과 질병},
+  author={김지아, 김유연, 김류경, 이선주, 박영준, 염한솔, 김성순},
+  year={2021},
+  publisher={Korea Disease Control and Prevention Agency}
+}
