add one more bib article

--- a/doc/210909_ref.bib
+++ b/doc/210909_ref.bib
@@ -48,3 +48,10 @@
   year={2021},
   publisher={Korea Disease Control and Prevention Agency}
 }
+
+@article{stowe2021,
+  title = {Effectiveness of COVID-19 vaccines against hospital admission with the Delta (B.1.617.2) variant},
+  author = {Julia Stowe, Nick Andrews, Charlotte Gower, Eileen Gallagher, Lara Utsi, Ruth Simmons, Simon Thelwall, Elise Tessier, Natalie Groves, Gavin Dabrera, Richard Myers, Colin Campbell, Gayatri Amirthalingam, Matt Edmunds, Maria Zambon, Kevin Brown, Susan Hopkins, Meera Chand, Mary Ramsay, Jamie Lopez Bernal},
+  journal = {MedRxiv},
+  year = {2021}
+}
