--- a/doc/210909_ref.bib
+++ b/doc/210909_ref.bib
@@ -42,7 +42,7 @@
 }
 
 @incollection{kdca2021,
-  title={2021년 5월∼7월 기간 동안 코로나19 백신의 중증 및 사망예방효과},
+  title={2021년 5월-7월 기간 동안 코로나19 백신의 중증 및 사망예방효과},
   booktitle={주간 건강과 질병},
   author={김지아, 김유연, 김류경, 이선주, 박영준, 염한솔, 김성순},
   year={2021},
